# MuXiT

./: .gitignore  Gradio.py  README.md  csvAgg.py  jsonify.py  package-lock.json  package.json  t.txt  t.yaml  test.ipynb  tracks.json  training_log.out  training_lora_10_epochs.out  training_lora_2nd_attempt.out  training_lora_2nd_attempt_lr_4.out  txtGen.py
daypack-main/: README.md  pyproject.toml  requirements.txt
daypack-main/daypack_js/: tsconfig.json
daypack-main/daypack_js/src/: daypack.ts
daypack-main/examples/: Hello_World.ipynb
daypack-main/src/: daypack.py  device.py  model.py  packstrap.py
daypack-main/src/templates/android/webview-ml-shell/: README.md  settings.gradle.kts
daypack-main/src/templates/android/webview-ml-shell/app/: build.gradle.kts
daypack-main/src/templates/android/webview-ml-shell/gradle/: libs.versions.toml
daypack-main/src/templates/android/webview-ml-shell/gradle/wrapper/: gradle-wrapper.properties
daypack-main/src/templates/ios/ios-webview-coreml-shell/daypack/: README.md
daypack-main/src/templates/ios/ios-webview-coreml-shell/daypack/daypack/: ContentView.swift  config.json  daypackApp.swift
daypack-main/src/templates/ios/ios-webview-coreml-shell/daypack/daypack.xcodeproj/: project.pbxproj
daypack-main/src/templates/ios/ios-webview-coreml-shell/daypack/daypackTests/: daypackTests.swift
daypack-main/src/templates/ios/ios-webview-coreml-shell/daypack/daypackUITests/: daypackUITests.swift  daypackUITestsLaunchTests.swift
daypack-main/tests/: daypack_android_test.py  daypack_test.py  device_test.py  model_test.py
(+103 files in other folders)
