[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "daypack"
version = "0.1.0"
description = "DayPack: A tool for managing device installations and models"
readme = "README.md"
authors = [{ name = "BaseWeight", email = "info@baseweight.ai" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache 2.0 License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["device", "management", "model", "installation"]
dependencies = [
    "gradio>=3.35.2",
    "tidevice==0.10.3",
    "pure-python-adb==0.3.0.dev0",
    "argparse==1.4.0",
]
requires-python = ">=3.7"

[tool.setuptools.package-data]
daypack = [
    "templates/android/**/*",
    "templates/ios/**/*"
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
daypack = "daypack:main"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"
